[package]
name = "haste"
version = "0.1.0"
authors = ["Tommy Westgeest <wtommywestgeest@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = "1.0.140"
regex = "1.6.0"

[dev-dependencies]
mockito = "0.31.0"
